cambios en emision de boleta

--- a/src/app/components/cliente/cliente.html
+++ b/src/app/components/cliente/cliente.html
@@ -47,6 +47,10 @@
             <md-icon class="ima" md-svg-src="/assets/img/correo.svg"></md-icon>
             <p class="ima">{{ vm.email }}</p>
           </div>
+          <div layout="row" class="perfil" style="margin-top: -10px;">
+            <md-icon class="ima" md-svg-src="/assets/img/subsidioGota.svg"></md-icon>
+            <p class="ima">{{ vm.subsidio }} %</p>
+          </div>
         </div>
       </div>
       
@@ -62,7 +66,6 @@
                     <tr md-row>
                       <th md-column md-numeric>Código</th>
                       <th md-column md-numeric>Dirección</th>
-                      <th md-column md-numeric>Subsidio</th>
                       <th md-column md-numeric>Fecha Ingreso</th>
                       <th md-column md-numeric>Ubicación</th>
                       <th md-column md-numeric>Estado</th>
@@ -72,7 +75,6 @@
                     <tr md-row md-select="dessert" md-select-id="name" md-auto-select class="tabla" ng-repeat="viviend in vm.vivienda">
                       <td md-cell>{{ viviend.id }}</td>
                       <td md-cell>{{ viviend.direccion }}</td>
-                      <td md-cell>{{ viviend.subsidio.des_subsidio }}</td>
                       <td md-cell>{{ viviend.fecha_ingreso }}</td>
                       <td md-cell>{{ viviend.comuna.des_comu }}</td>
                       <td md-cell>{{ viviend.estado.des_estado }}</td>
