--- a/src/app/components/medidores/medidores.html
+++ b/src/app/components/medidores/medidores.html
@@ -61,7 +61,7 @@
                 </md-button>
               </td>
               <td md-cell>
-                <md-button class="md-icon-button" ng-click="vm.actualizarmedidor(medid.id)" style="margin-right: -40px;">
+                <md-button class="md-icon-button" ng-click="vm.actualizarmedidor(medid.id, $index)" style="margin-right: -40px;">
                   <md-icon  md-svg-icon="/assets/img/edituser.svg"></md-icon>
                 </md-button>
               </td>
