--- a/src/app/components/menuRegistros/menuRegistros.html
+++ b/src/app/components/menuRegistros/menuRegistros.html
@@ -105,7 +105,7 @@
             </div>
             <div flex>
               <!--<md-button ui-sref="registroMensual">-->
-              <md-button ng-click="vm.goToMedidores()">
+              <md-button ng-click="vm.goToMedidoresRegistroMensual()">
                 <md-card class="md-whiteframe-8dp">
                   <md-card-title>
                     <md-card-title-text>
@@ -122,7 +122,7 @@
               </md-button>
             </div> 
             <div flex>
-              <md-button ui-sref="#">
+              <md-button ng-click="vm.goToMedidoresEmitirBoleta()">
                 <md-card class="md-whiteframe-8dp">
                   <md-card-title>
                     <md-card-title-text>
