--- a/src/app/components/tabla/tabla.html
+++ b/src/app/components/tabla/tabla.html
@@ -59,7 +59,7 @@
                 </md-button>
               </td>
               <td md-cell>
-                <md-button class="md-icon-button" ng-click="vm.updatecliente(client.id)" style="margin-right: -40px;">
+                <md-button class="md-icon-button" ng-click="vm.updatecliente(client.id, $index)" style="margin-right: -40px;">
                   <md-icon  md-svg-icon="/assets/img/edituser.svg"></md-icon>
                 </md-button>
               </td>
