--- a/src/app/components/viviendas/viviendas.html
+++ b/src/app/components/viviendas/viviendas.html
@@ -49,7 +49,7 @@
               <td md-cell>{{ viviend.comuna.des_comu }}</td>
               <td md-cell>{{ viviend.estado.des_estado }}</td>
               <td md-cell>
-                <md-button class="md-icon-button" ng-click="vm.actualizarvivienda(viviend.id)" style="margin-right: -40px;">
+                <md-button class="md-icon-button" ng-click="vm.actualizarvivienda(viviend.id, $index)" style="margin-right: -40px;">
                   <md-icon  md-svg-icon="/assets/img/edituser.svg"></md-icon>
                 </md-button>
               </td>
