--- a/src/app/components/emisionCobranza/emisionCobranza.html
+++ b/src/app/components/emisionCobranza/emisionCobranza.html
@@ -17,7 +17,7 @@
               <md-input-container md-no-float class="md-block" style="margin-top: -5px;">
                 <label>Nro de Boleta</label>
                 <md-icon md-svg-src="/assets/img/number.svg"></md-icon>
-                <input ng-model="vm.parametros.alcantarillado" type="number" disabled>
+                <input ng-model="vm.nroBoleta" type="number" disabled>
               </md-input-container>
             </div>
 
@@ -28,19 +28,19 @@
               <md-input-container class="md-icon-float md-block" style="margin-top: -5px;">
                 <label>Nombre Cliente</label>
                 <md-icon md-svg-src="/assets/img/usuario.svg"></md-icon>
-                <input ng-model="vm.dataMedidor.num_medidor" value="vm.dataMedidor.id" disabled>
+                <input ng-model="vm.nombreCompleto" value="" disabled>
               </md-input-container>
             
               <md-input-container md-no-float class="md-block" style="margin-top: -20px;">
                 <label>Domicilio</label>
                 <md-icon md-svg-src="/assets/img/casa.svg"></md-icon>
-                <input ng-model="vm.dataMedidor.vivienda.direccion" value="vm.dataMedidor.vivienda_id" disabled>
+                <input ng-model="vm.dataMedidor.vivienda.direccion" disabled>
               </md-input-container>
            
               <md-input-container md-no-float class="md-block" style="margin-top: -20px;">
                 <label>Medidor</label>
                 <md-icon md-svg-src="/assets/img/medidor.svg"></md-icon>
-                <input ng-model="vm.dataMedidor.vivienda.direccion" value="vm.dataMedidor.vivienda_id" disabled>
+                <input ng-model="vm.dataMedidor.num_medidor" value="vm.dataMedidor.medidor_id" disabled>
               </md-input-container>
             </div>
 
@@ -51,19 +51,19 @@
               <md-input-container md-no-float class="md-block" style="margin-top: -5px;">
                 <label>Lectura Anterior (m3)</label>
                 <md-icon md-svg-src="/assets/img/lectura.svg"></md-icon>
-                <input ng-model="vm.lecturaMensual.lectura" type="number" disabled>
+                <input ng-model="vm.dataLectura.lectura_anterior" type="number" disabled>
               </md-input-container>
           
               <md-input-container md-no-float class="md-block" style="margin-top: -20px;">
                 <label>Lectura Actual (m3)</label>
                 <md-icon md-svg-src="/assets/img/lectura.svg"></md-icon>
-                <input ng-model="vm.lecMensual.lectura" type="number">
+                <input ng-model="vm.dataLectura.lectura" type="number" disabled>
               </md-input-container>
        
               <md-input-container md-no-float class="md-block" style="margin-top: -20px;">
                 <label>Consumo (m3)</label>
                 <md-icon md-svg-src="/assets/img/lectura.svg"></md-icon>
-                <input ng-model="vm.consumo" type="number" disabled>
+                <input ng-model="vm.dataLectura.consumo" type="number" disabled>
               </md-input-container>
 
               <md-input-container md-no-float class="md-block" style="margin-top: -20px;">
@@ -73,7 +73,7 @@
               </md-input-container>
 
               <md-input-container md-no-float class="md-block" style="margin-top: -20px;">
-                <label>Alcantarillado $/m3</label>
+                <label>Alcantarillado $</label>
                 <md-icon md-svg-src="/assets/img/saldo.svg"></md-icon>
                 <input ng-model="vm.parametros.alcantarillado" type="number" disabled>
               </md-input-container>
@@ -97,7 +97,7 @@
                   <md-input-container class="md-icon-float md-block" style="margin-top: -5px;">
                     <label>Multa Reunión</label>
                     <md-icon md-svg-src="/assets/img/multa.svg"></md-icon>
-                    <input ng-model="vm.dataMedidor.num_medidor" value="vm.dataMedidor.id">
+                    <input ng-model="vm.nroBoleta" value="vm.dataMedidor.id">
                   </md-input-container>
                 </div>
               </div>
@@ -107,7 +107,7 @@
                   <md-input-container md-no-float class="md-block" style="margin-top: -10px;">
                     <label>Multa Corte</label>
                     <md-icon md-svg-src="/assets/img/multa.svg"></md-icon>
-                    <input ng-model="vm.dataMedidor.vivienda.direccion" value="vm.dataMedidor.vivienda_id">
+                    <input ng-model="vm.nroBoleta" value="vm.dataMedidor.vivienda_id">
                   </md-input-container>
                 </div>
               </div>
@@ -117,7 +117,7 @@
                   <md-input-container md-no-float class="md-block" style="margin-top: -10px;">
                     <label>Multa Adulteración</label>
                     <md-icon md-svg-src="/assets/img/multa.svg"></md-icon>
-                    <input ng-model="vm.dataMedidor.vivienda.direccion" value="vm.dataMedidor.vivienda_id">
+                    <input ng-model="vm.nroBoleta" value="vm.dataMedidor.vivienda_id">
                   </md-input-container>
                 </div>
               </div>
@@ -128,40 +128,38 @@
             </div>
             <div layout="column" layout-xs="column">
               <md-input-container md-no-float class="md-block" style="margin-top: 0px; width: 224px; margin-bottom: 40px;">
-                <label>Subsidio $</label>
+                <label>Subsidio %</label>
                 <md-icon md-svg-src="/assets/img/casa.svg"></md-icon>
-                <md-select ng-model="vm.cliente.subsidio_id">
-                  <md-option ng-repeat="subsi in vm.subsidio" value="{{ subsi.id }}">{{ subsi.des_subsidio }}</md-option>
-                </md-select>
+                <input ng-model="vm.valorSubsidio" type="text" disabled>
               </md-input-container>
 
               <md-input-container md-no-float class="md-block" style="margin-top: -20px;">
                 <label>Saldo $</label>
                 <md-icon md-svg-src="/assets/img/saldo.svg"></md-icon>
-                <input ng-model="vm.parametros.alcantarillado" type="number" disabled>
+                <input ng-model="vm.dataLectura.saldo_pagado" type="number" disabled>
               </md-input-container>
 
               <md-input-container md-no-float class="md-block" style="margin-top: -20px;">
                 <label>Monto a Pagar $</label>
                 <md-icon md-svg-src="/assets/img/saldo.svg"></md-icon>
-                <input ng-model="vm.parametros.alcantarillado" type="number" disabled>
+                <input ng-model="vm.dataLectura.valor_pagar" type="number" disabled>
               </md-input-container>
 
               <md-input-container md-no-float class="md-block" style="margin-top: -20px;">
                 <label>Total Abono $</label>
                 <md-icon md-svg-src="/assets/img/saldo.svg"></md-icon>
-                <input ng-model="vm.parametros.alcantarillado" type="number" disabled>
+                <input ng-model="vm.totalAbonos" type="number" disabled>
               </md-input-container>
 
               <md-input-container md-no-float class="md-block" style="margin-top: -20px;">
                 <label>Paga Boleta(?)</label>
                 <md-icon md-svg-src="/assets/img/saldo.svg"></md-icon>
-                <input ng-model="vm.parametros.alcantarillado" type="number" disabled>
+                <input ng-model="vm.pagaBoleta" type="number" disabled>
               </md-input-container>
 
               <md-input-container md-no-float class="md-block" style="margin-top: -15px; margin-left: -13px;">
                 <label>Fecha de Pago</label>
-                <md-datepicker ng-model="ctrl.myDate" md-placeholder="Seleccione Día"></md-datepicker>
+                <md-datepicker ng-model="vm.date" md-placeholder="Seleccione Día"></md-datepicker>
               </md-input-container>
               
             </div>
@@ -173,7 +171,7 @@
               <md-input-container class="md-icon-float md-block" style="margin-top: -5px; width: 224px;">
                 <label>Total $</label>
                 <md-icon md-svg-src="/assets/img/saldo.svg"></md-icon>
-                <input ng-model="vm.dataMedidor.num_medidor" value="vm.dataMedidor.id" disabled>
+                <input ng-model="vm.total" value="vm.dataMedidor.id" disabled>
               </md-input-container>
             </div>
           </div>
@@ -184,7 +182,7 @@
       <div>
         <div flex layout-xs="column" class="datos">
           <div layout="row" layout-align="center center" layout-padding>
-            <md-button id="registro" class="md-raised marg" md-colors="{background: 'LightBlue-900'}" layout-fill style="min-height: 50px;">Ingresar Datos</md-button>
+            <md-button id="registro" class="md-raised marg" md-colors="{background: 'LightBlue-900'}" layout-fill style="min-height: 50px;" ng-click="vm.emitirCobranza(vm.dataLectura)">Ingresar Datos</md-button>
           </div>
         </div>
       
