--- a/src/app/components/registro/actualizarCliente.html
+++ b/src/app/components/registro/actualizarCliente.html
@@ -12,14 +12,14 @@
             <md-input-container class="md-icon-float md-block">
               <label>RUT</label>
               <md-icon md-svg-src="/assets/img/usuario.svg" class="name"></md-icon>
-              <input ng-model="vm.cliente.rut_cliente" type="">
+              <input ng-model="vm.client.rut_cliente" type="">
             </md-input-container>
           </div>
           <div flex>
             <md-input-container md-no-float class="md-block">
               <label>Nombre Social</label>
               <md-icon md-svg-src="/assets/img/usuario.svg"></md-icon>
-              <input ng-model="vm.cliente.nombre" type="text">
+              <input ng-model="vm.client.nombre" type="text">
             </md-input-container>
           </div>
         </div>
@@ -30,14 +30,14 @@
             <md-input-container md-no-float class="md-block">
               <label>Apellido Paterno</label>
               <md-icon md-svg-src="/assets/img/usuario.svg"></md-icon>
-              <input ng-model="vm.cliente.apellido_pater" type="text">
+              <input ng-model="vm.client.apellido_pater" type="text">
             </md-input-container>
           </div>
           <div flex>
             <md-input-container md-no-float class="md-block">
               <label>Apellido Materno</label>
               <md-icon md-svg-src="/assets/img/usuario.svg"></md-icon>
-              <input ng-model="vm.cliente.apellido_mater" type="text">
+              <input ng-model="vm.client.apellido_mater" type="text">
             </md-input-container>
           </div>
         </div>
@@ -48,14 +48,14 @@
             <md-input-container md-no-float class="md-block">
               <label>Telefono</label>
               <md-icon md-svg-src="/assets/img/telefono.svg"></md-icon>
-              <input ng-model="vm.cliente.telefono" type="text">
+              <input ng-model="vm.client.telefono" type="text">
             </md-input-container>
           </div>
           <div flex>
             <md-input-container md-no-float class="md-block">
               <label>Email</label>
               <md-icon md-svg-src="/assets/img/correo.svg"></md-icon>
-              <input ng-model="vm.cliente.email" type="text">
+              <input ng-model="vm.client.email" type="text">
             </md-input-container>
           </div>
         </div>
@@ -65,14 +65,14 @@
           <md-input-container md-no-float class="md-block">
             <label>Subsidio</label>
             <md-icon md-svg-src="/assets/img/casa.svg"></md-icon>
-            <md-select ng-model="vm.cliente.subsidio_id">
+            <md-select ng-model="vm.client.subsidio_id">
               <md-option ng-repeat="subsi in vm.subsidio" value="{{ subsi.id }}">{{ subsi.des_subsidio }}</md-option>
             </md-select>
           </md-input-container>
         </div>
       </div><br>
       <div layout="row" layout-align="center center" flex layout-xs="column" class="datos">
-        <md-button id="registro" class="md-raised" md-colors="{background: 'LightBlue-900'}" layout-fill style="min-height: 50px;" ng-click="vm.actualizarcliente(vm.cliente)">Actualizar Cliente</md-button>
+        <md-button id="registro" class="md-raised" md-colors="{background: 'LightBlue-900'}" layout-fill style="min-height: 50px;" ng-click="vm.actualizarcliente(vm.client)">Actualizar Cliente</md-button>
       </div>
       <div layout="row" layout-align="end center" flex layout-xs="column" ng-if="vm.usuario.superadmin == 1">
         <md-button class="md-icon-button md-raised" layout-fill ui-sref="tabla">
