--- a/src/app/components/registroMensual/registroMensual.html
+++ b/src/app/components/registroMensual/registroMensual.html
@@ -62,8 +62,7 @@
               <md-input-container md-no-float class="md-block">
                 <label>Lectura Actual (m3)</label>
                 <md-icon md-svg-src="/assets/img/lectura.svg"></md-icon>
-                <!--agregar min value (ajax)-->
-                <input ng-model="vm.lecMensual.lectura" type="number" min="vm.lecturaMensual.lectura">
+                <input ng-model="vm.lecMensual.lectura" type="number">
               </md-input-container>
             </div>
           </div>
@@ -121,7 +120,7 @@
               <md-input-container class="md-icon-float md-block">
                 <label>Saldo Anterior $:</label>
                 <md-icon md-svg-src="/assets/img/saldo.svg"></md-icon>
-                <input ng-model="vm.lecMensual.saldo_pagado" type="number">
+                <input ng-model="vm.saldoAnterior" type="number" disabled>
               </md-input-container>
             </div>
           </div>
