--- a/src/app/components/registro/actualizarCliente.html
+++ b/src/app/components/registro/actualizarCliente.html
@@ -66,7 +66,7 @@
             <label>Subsidio</label>
             <md-icon md-svg-src="/assets/img/casa.svg"></md-icon>
             <md-select ng-model="vm.client.subsidio_id">
-              <md-option ng-repeat="subsi in vm.subsidio" value="{{ subsi.id }}">{{ subsi.des_subsidio }}</md-option>
+              <md-option ng-repeat="subsi in vm.subsidio" value="{{ subsi.id }}">{{ subsi.subsidio_porcentaje }} %</md-option>
             </md-select>
           </md-input-container>
         </div>
