--- a/src/app/components/registroAbono/abonoBoleta.html
+++ b/src/app/components/registroAbono/abonoBoleta.html
@@ -1,44 +1,31 @@
 <div layout-padding>
   <div flex="60" flex-offset="20" flex-md="60" flex-offset-md="20" flex-sm="70" flex-offset-sm="15" flex-xs="90" flex-offset-xs="5" class="fond mar">
-    <div layout-padding>
-      <div layout-xs="column">
-        <div flex>
-          <div layout-xs="column" layout-xs="column" layout="row" layout-align="center center" flex-xs="90" flex-offset-xs="5">
-            <h2>Registro Abono</h2>
-          </div>  
-        </div>
+    <div layout-padding flex layout="column">
+      <div layout-xs="column" layout-xs="column" layout="row" layout-align="center center">
+        <div>
+          <h2>Registro Abono</h2>
+        </div>  
       </div>
-      <div layout-xs="column">
-        <div flex>
-          <div layout-xs="column" class="datos">
-            <div flex>
-              <md-input-container class="md-icon-float md-block">
-                <label>Código Abono</label>
-                <md-icon md-svg-src="/assets/img/number.svg" class="name"></md-icon>
-                <input ng-model="vm.abono.cod_abono" type="">
-              </md-input-container>
-            </div>
+
+      <div layout-xs="column" class="datos">
+        <div layout="row" layout-xs="column">
+          <div flex>
+            <md-input-container class="md-icon-float md-block">
+              <label>ID Boleta</label>
+              <md-icon md-svg-src="/assets/img/number.svg" class="name"></md-icon>
+              <input ng-model="vm.abono.boleta_emitida_id" type="text">
+            </md-input-container>
           </div>
-          <div layout-xs="column" class="datos">
-            <div flex>
-              <md-input-container class="md-icon-float md-block">
-                <label>Monto Abonado</label>
-                <md-icon md-svg-src="/assets/img/saldo.svg" class="name"></md-icon>
-                <input ng-model="vm.abono.monto_abonado" type="text">
-              </md-input-container>
-            </div>
-          </div>
-          <div layout-xs="column" class="datos">
-            <div flex>
-              <md-input-container class="md-icon-float md-block">
-                <label>ID Boleta</label>
-                <md-icon md-svg-src="/assets/img/number.svg" class="name"></md-icon>
-                <input ng-model="vm.abono.boleta_emitida_id" type="text">
-              </md-input-container>
-            </div>
+          <div flex>
+            <md-input-container class="md-icon-float md-block">
+              <label>Monto Abonado</label>
+              <md-icon md-svg-src="/assets/img/saldo.svg" class="name"></md-icon>
+              <input ng-model="vm.abono.monto_abonado" type="text">
+            </md-input-container>
           </div>
         </div>
       </div>
+      
       <div flex layout-xs="column">
         <div layout="row" layout-align="center center" layout-padding>
           <md-button id="registro" class="md-raised marg" md-colors="{background: 'LightBlue-900'}" layout-fill style="min-height: 50px;" ng-click="vm.registrarAbono(vm.abono)">Registrar Abono</md-button>
